# Matths-stuff

desktop-solver/: BUILD.md  README.md  pyproject.toml  requirements.txt  run.py
desktop-solver/src/desktop_solver/: __init__.py  __main__.py  chat_store.py  cli.py  executor.py  gui.py  latex_io.py  llm_engine.py  prompts.py  scanner.py  solver.py  tag_extractor.py  verifier.py
desktop-solver/tests/: test_chat_store.py  test_executor.py  test_scanner.py
gcse-solver/: BUILD.md  CMakeLists.txt  README.md
gcse-solver/src/: executor.cpp  executor.hpp  llm_engine.cpp  llm_engine.hpp  main.cpp  output_formatter.hpp  tag_extractor.hpp
gcse-solver/tests/: test_executor.cpp
